--- a/style.css
+++ b/style.css
@@ -36,10 +36,17 @@ color: white;
 }
 
 /* Metallic Gold Shades for CB, SL */
+#location-7, #location-8, #location-9, #location-12, #location-13, #location-14, #location-17, #location-18, #location-19  {
+background-color: #d3a625; /* A different shade of gold */
+color: white;
+}
+
+/* Metallic Gold Shades for Strikes */
 #curveBall, #slider {
 background-color: #d3a625; /* A different shade of gold */
 color: white;
 }
+
 
 /* Royal Blue Shades for CH, SP */
 #changeup, #splitter {
@@ -60,6 +67,30 @@ margin: 10px;
 padding: 15px;
 font-size: 1.2em;
 }
+
+#pitchLocationSelection {
+  text-align: center;
+}
+
+#pitchLocationContainer {
+  display: flex;
+  justify-content: center; /* Centers horizontally */
+  align-items: center; /* Centers vertically, optional */
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+#pitchLocationGrid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1px;
+  justify-items: center;
+  width: fit-content;
+  margin: auto;
+}
+
+
 
 /* Styles for completed count log */
 #countLog {
