--- a/style.css
+++ b/style.css
@@ -188,5 +188,10 @@ border-radius: 5px;
   100% { opacity: 0; transform: translateX(100px); }
 }
 
+.heatmapBtn {
+  pointer-events: none;
+}
+
+
 
 
