--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ font-size: 1.2em;
 
 #pitchLocationGrid, #heatmap {
   display: grid;
-  grid-template-columns: repeat(7, auto);
+  grid-template-columns: repeat(7, 1fr);
   gap: 2px; /* Adjust the gap between buttons */
   justify-items: center;
   width: fit-content;
