--- a/style.css
+++ b/style.css
@@ -17,6 +17,21 @@ button {
   font-family: 'Permanent Marker', cursive;
 }
 
+/* R2K Mode, Putaway Mode, Points Mode buttons */
+#bullpenModeBtn,
+#putawayModeBtn,
+#pointsModeBtn {
+  background-color: lightblue;
+  color: #0a2351;
+}
+
+/* Live BP Mode button */
+#liveBPModeBtn {
+  background-color: #ffb517;
+  color: #0a2351;
+}
+
+
 #currentCount, #raceWins {
   margin-bottom: 20px;
 }
